k8s/deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: flask-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
  namespace: flask-app
  labels:
    app: flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app
          image: saurabhdocker13/flask-iptime:latest
          ports:
            - containerPort: 5000
