k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-microservice-service
spec:
  selector:
    app: simple-microservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
